Partial İşlemindeki Hata Düzeltildi
Partial hatası düzeltildi ve güncellendi

--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 </head>
 
 <body class="index-page">
-  @await Html.PartialAsync("_HeadaerPartial")
+  @await Html.PartialAsync("_HeaderPartial")
   <main class="main">
     @RenderBody()
     <!-- Hero Section -->
