--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -2,39 +2,26 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="~/Uİ/img/logo.png" alt=""> -->
             <i class="bi bi-camera"></i>
             <h1 class="sitename">PopcornViews</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
             <ul>
-                <li><a href="index.html" class="active">Home<br></a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i
+                <li><a href="index.html" class="active">Ana Sayfa<br></a></li>
+                <li class="dropdown"><a href="gallery.html"><span>Kategoriler</span><i
                             class="bi bi-chevron-down toggle-dropdown"></i></a>
+
                     <ul>
-                        <li><a href="gallery.html">Nature</a></li>
-                        <li><a href="gallery.html">People</a></li>
-                        <li><a href="gallery.html">Architecture</a></li>
-                        <li><a href="gallery.html">Animals</a></li>
-                        <li><a href="gallery.html">Sports</a></li>
-                        <li><a href="gallery.html">Travel</a></li>
-                        <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                                    class="bi bi-chevron-down toggle-dropdown"></i></a>
-                            <ul>
-                                <li><a href="#">Deep Dropdown 1</a></li>
-                                <li><a href="#">Deep Dropdown 2</a></li>
-                                <li><a href="#">Deep Dropdown 3</a></li>
-                                <li><a href="#">Deep Dropdown 4</a></li>
-                                <li><a href="#">Deep Dropdown 5</a></li>
-                            </ul>
-                        </li>
+                        <li><a asp-controller="Category" asp-action="Aksiyon">Aksiyon</a></li>
+                        <li><a asp-controller="Category" asp-action="Komedi">Komedi</a></li>
+                        <li><a asp-controller="Category" asp-action="Drama">Drama</a></li>
+                        <li><a asp-controller="Category" asp-action="Korku">Korku</a></li>
+                        <li><a asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a></li>
                     </ul>
                 </li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">İletişim</a></li>
+                <li><a href="index.html">Yönetim<br></a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
