--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -20,7 +20,7 @@
                         <li><a asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">İletişim</a></li>
+                <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
                 <li><a asp-area="Admin" asp-controller="Home" asp-action="Index" >Yönetim<br></a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
