--- a/MovieApp/Areas/Kategori/Views/Category/Korku.cshtml
+++ b/MovieApp/Areas/Kategori/Views/Category/Korku.cshtml
@@ -1,7 +1,21 @@
-@model IEnumerable<Movie>
 @{
     ViewData["Title"] = "Korku";
 }
+<div class="page-title" data-aos="fade">
+    <div class="heading">
+        <div class="container">
+            <div class="row d-flex justify-content-center text-center">
+                <div class="col-lg-8">
+                    <h1>KORKU</h1>
+                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
+                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
+                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 
 <section id="gallery" class="gallery section">
 
