--- a/MovieApp/Areas/Kategori/Views/Category/BilimKurgu.cshtml
+++ b/MovieApp/Areas/Kategori/Views/Category/BilimKurgu.cshtml
@@ -1,26 +1,22 @@
-﻿<section id="hero" class="hero section">
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
-                <h1>
-                    @Model.AppSetting.BrandName
-                </h1>
-
-                <h4>
-                    @Model.AppSetting.HeroTitle
-                </h4>
-
-                <p>
-                    @Model.AppSetting.HeroSubTitle
-                </p>
+@{
+    ViewData["Title"] = "BilimKurgu";
+}
+<div class="page-title" data-aos="fade">
+    <div class="heading">
+        <div class="container">
+            <div class="row d-flex justify-content-center text-center">
+                <div class="col-lg-8">
+                    <h1>BİLİM KURGU</h1>
+                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
+                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
+                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                </div>
             </div>
         </div>
     </div>
 
-</section><!-- /Hero Section -->
+</div>
 
-<!-- Gallery Section -->
 <section id="gallery" class="gallery section">
 
     <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
@@ -119,4 +115,4 @@
 
     </div>
 
-</section><!-- /Gallery Section -->
+</section>
