--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -28,16 +28,46 @@
 
 <!-- Gallery Section -->
 <section id="gallery" class="gallery section">
+    <!-- IMDB Yüksek Filmler Başlığı -->
+    <div style="display: flex; justify-content: center; margin-bottom: 10px;">
+        <h4>IMDB YÜKSEK FİLMLER</h4>
+    </div>
+    <!-- Çizgi -->
+    <div style="border-top: 2px solid white; width: 50%; margin: 0 auto;"></div>
 
+    <!-- İlk 4 Film Kartları -->
     <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
-
         <div class="row gy-4 justify-content-center">
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Aksiyon-MadMax-1.png" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Aksiyon-MadMax-1.png" title="Mad Max"
+                            class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-1.jpg" class="img-fluid" alt="">
+                    <img src="~/Uİ/img/Filmler/Aksiyon-jhonwick-2.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"><i
+                        <a href="~/Uİ/img/Filmler/Aksiyon-jhonwick-2.jpg" title="Jhon Wick 2"
+                            class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Aksiyon-matrix-5.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Aksiyon-matrix-5.jpg" title="Matrix" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
                         <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
                     </div>
@@ -46,83 +76,76 @@
 
             <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
+                    <img src="~/Uİ/img/Filmler/BilimKurgu-Yıldızlarası-2.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="~/Uİ/img/Filmler/BilimKurgu-Yıldızlarası-2.jpg" title="Yıldızlar Arası"
+                            class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                         <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-6.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6">
-                <div class="gallery-item h-100">
-                    <img src="~/Uİ/img/gallery/gallery-8-2.jpg" class="img-fluid" alt="">
-                    <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/Uİ/img/gallery/gallery-8-2.jpg" title="Gallery 8" class="glightbox preview-link"><i
-                                class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                    </div>
-                </div>
-            </div><!-- End Gallery Item -->
-
         </div>
-
     </div>
 
-</section><!-- /Gallery Section -->
+    <!-- 2024 Yılının En Çok İzlenen Filmleri Başlığı -->
+    <div style="display: flex; justify-content: center; margin-bottom: 10px; margin-top: 20px;">
+        <h4>2024 YILININ EN ÇOK İZLENEN FİLMLERİ</h4>
+    </div>
+    <!-- Çizgi -->
+    <div style="border-top: 2px solid white; width: 50%; margin: 0 auto;"></div>
+
+    <!-- Sonraki 4 Film Kartları -->
+    <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4 justify-content-center">
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Komedi-uveykardesler-4.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Komedi-uveykardesler-4.jpg" title="Üvey Kardeşler"
+                            class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Korku-CadılarBayramı-4.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Korku-CadılarBayramı-4.jpg" title="Cadılar Bayramı"
+                            class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Dram-baba-4.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Dram-baba-4.jpg" title="Baba" class="glightbox preview-link"><i
+                                class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6">
+                <div class="gallery-item h-100">
+                    <img src="~/Uİ/img/Filmler/Korku-O-5.jpg" class="img-fluid" alt=""
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                    <div class="gallery-links d-flex align-items-center justify-content-center">
+                        <a href="~/Uİ/img/Filmler/Korku-O-5.jpg" title="O" class="glightbox preview-link"><i
+                                class="bi bi-arrows-angle-expand"></i></a>
+                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    </div>
+                </div>
+            </div><!-- End Gallery Item -->
+        </div>
+    </div>
+</section>
+<!-- /Gallery Section -->
