--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -3,11 +3,11 @@
 
         <a asp-area="Views" asp-controller="Home" asp-action="Index"
             class="logo d-flex align-items-center me-auto me-xl-0">
-            <i class="bi bi-camera"></i>
+            <i class="bi bi-film" style="color: #c59b00;"></i>
             <h1 class="sitename">PopcornViews</h1>
         </a>
 
-        <nav id="navmenu" class="navmenu">
+        <nav id="navmenu" class="navmenu ">
             <ul>
                 <li><a asp-area="Views" asp-controller="Home" asp-action="Index">Ana Sayfa</a></li>
                 <li class="dropdown"><a href="gallery.html"><span>KATEGORİLER</span><i
