--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -4,7 +4,11 @@
 }
 
 
-<section id="hero" class="hero section">
+<section id="hero" class="hero section" style="position: relative; height: 100vh; overflow: hidden;">
+
+    <!-- Resmi ekliyoruz -->
+    <img src="@Url.Content("~/Uİ/img/backfont.jpg")" alt="Hero Image"
+        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 1800px; height: 10    00px; object-fit: cover; filter: blur(3px); opacity: 0.2; z-index: 0;" />
 
     <div class="container">
         <div class="row justify-content-center">
@@ -24,7 +28,13 @@
         </div>
     </div>
 
-</section><!-- /Hero Section -->
+    <!-- Opaklık için eklenen overlay -->
+    <div
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.4); z-index: 1;">
+    </div>
+
+</section>
+<!-- /Hero Section -->
 
 <!-- Gallery Section -->
 <section id="gallery" class="gallery section">
