--- a/MovieApp/Areas/Kategori/Views/Category/BilimKurgu.cshtml
+++ b/MovieApp/Areas/Kategori/Views/Category/BilimKurgu.cshtml
@@ -24,10 +24,10 @@
             {
                 <div class="col-xl-2 col-lg-3 col-md-4 col-6">
                     <div class="gallery-item h-100">
-                        <img src="@item.MovieImgURL" class="img-fluid" alt=""
+                        <img src="@item.MovieImgURL" class="img-fluid" alt="@item.MovieName"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-links d-flex align-items-center justify-content-center">
-                            <a href="@item.MovieImgURL" title="" class="glightbox preview-link">
+                            <a href="@item.MovieImgURL" title="@item.MovieName" class="glightbox preview-link">
                                 <i class="bi bi-arrows-angle-expand"></i>
                             </a>
                             <a href="gallery-single.html" class="details-link">
