--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -86,10 +86,10 @@
 
             <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="gallery-item h-100">
-                    <img src="~/ui/img/Filmler/BilimKurgu-Yıldızlarası-2.jpg" class="img-fluid" alt=""
+                    <img src="~/ui/img/Filmler/BilimKurgu-Yildizlararasi-2.jpg" class="img-fluid" alt=""
                         style="width: 100%; height: 100%; object-fit: cover;">
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/ui/img/Filmler/BilimKurgu-Yıldızlarası-2.jpg" title="Yıldızlar Arası"
+                        <a href="~/ui/img/Filmler/BilimKurgu-Yildizlararasi-2.jpg" title="Yıldızlar Arası"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                         <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
                     </div>
@@ -122,10 +122,10 @@
 
             <div class="col-xl-3 col-lg-4 col-md-6">
                 <div class="gallery-item h-100">
-                    <img src="~/ui/img/Filmler/Korku-CadılarBayramı-4.jpg" class="img-fluid" alt=""
+                    <img src="~/ui/img/Filmler/Korku-CadilarBayrami-4.jpg" class="img-fluid" alt=""
                         style="width: 100%; height: 100%; object-fit: cover;">
                     <div class="gallery-links d-flex align-items-center justify-content-center">
-                        <a href="~/ui/img/Filmler/Korku-CadılarBayramı-4.jpg" title="Cadılar Bayramı"
+                        <a href="~/ui/img/Filmler/Korku-CadilarBayrami-4.jpg" title="Cadılar Bayramı"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                         <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
                     </div>
