--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -10,7 +10,7 @@
         <nav id="navmenu" class="navmenu ">
             <ul>
                 <li><a asp-area="Views" asp-controller="Home" asp-action="Index">Ana Sayfa</a></li>
-                <li class="dropdown"><a href="gallery.html"><span>KATEGORİLER</span><i
+                <li class="dropdown"><a ><span>KATEGORİLER</span><i
                             class="bi bi-chevron-down toggle-dropdown"></i></a>
 
                     <ul>
