--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -55,7 +55,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-MadMax-1.png" title="Mad Max"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Detay" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -67,7 +68,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-jhonwick-2.jpg" title="Jhon Wick 2"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -79,7 +81,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-matrix-5.jpg" title="Matrix" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -91,7 +94,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/BilimKurgu-Yildizlararasi-2.jpg" title="Yıldızlar Arası"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -115,7 +119,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Komedi-uveykardesler-4.jpg" title="Üvey Kardeşler"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -127,7 +132,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Korku-CadilarBayrami-4.jpg" title="Cadılar Bayramı"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -139,7 +145,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Dram-baba-4.jpg" title="Baba" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -151,7 +158,8 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Korku-O-5.jpg" title="O" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
+                                class="bi bi-link-45deg"></i></a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
