--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -14,15 +14,15 @@
                             class="bi bi-chevron-down toggle-dropdown"></i></a>
 
                     <ul>
-                        <li><a asp-area="Kategori" asp-controller="Category" asp-action="Aksiyon">Aksiyon</a></li>
-                        <li><a asp-area="Kategori" asp-controller="Category" asp-action="Komedi">Komedi</a></li>
-                        <li><a asp-area="Kategori" asp-controller="Category" asp-action="Drama">Drama</a></li>
-                        <li><a asp-area="Kategori" asp-controller="Category" asp-action="Korku">Korku</a></li>
-                        <li><a asp-area="Kategori" asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a>
+                        <li><a  asp-controller="Category" asp-action="Aksiyon">Aksiyon</a></li>
+                        <li><a  asp-controller="Category" asp-action="Komedi">Komedi</a></li>
+                        <li><a  asp-controller="Category" asp-action="Drama">Dram</a></li>
+                        <li><a  asp-controller="Category" asp-action="Korku">Korku</a></li>
+                        <li><a  asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a>
                         </li>
                     </ul>
                 </li>
-                <li><a asp-area="Iletisim" asp-controller="Iletisims" asp-action="Index">İLETİŞİM</a></li>
+                <li><a  asp-controller="Iletisims" asp-action="Index">İLETİŞİM</a></li>
                 <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">YÖNETİM<br></a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
