--- a/MovieApp/Views/Detay/Index.cshtml
+++ b/MovieApp/Views/Detay/Index.cshtml
@@ -15,6 +15,10 @@
         </div>
     </div>
 </div>
+
+<!-- Gri Kalın Çizgi -->
+<div class="divider"></div>
+
 <section id="gallery-details" class="gallery-details section">
     <div class="container" data-aos="fade-up">
         <div class="row justify-content-between gy-4 mt-4">
@@ -22,12 +26,6 @@
                 <div class="portfolio-description">
                     <h2>@Model.MovieName</h2>
                     <p class="mb-0">@Model.AboutMovie</p>
-                    <p>
-                        Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia
-                        quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim.
-                        Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla
-                        at esse enim cum deserunt eius.
-                    </p>
                 </div>
             </div>
             <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
@@ -48,24 +46,27 @@
 <style>
     .movie-image {
         width: 356px;
-        /* Genişlik */
         height: 512px;
-        /* Yükseklik */
         object-fit: cover;
-        /* Görüntüyü kırpmadan kapla */
         border-radius: 8px;
-        /* Köşeleri yuvarlat */
     }
 
     .portfolio-info ul {
         list-style-type: none;
-        /* Liste stilini kaldır */
         padding: 0;
-        /* İç boşluğu sıfırla */
     }
 
     .portfolio-info ul li {
         margin-bottom: 10px;
-        /* Liste elemanları arasında boşluk */
+    }
+
+    /* Gri Kalın Çizgi Stili */
+    .divider {
+        width: 100%;
+        height: 4px;
+        background-color: #ccc;
+        /* Gri renk */
+        margin: 20px 0;
+        /* Yukarı ve aşağı boşluk */
     }
 </style>
