--- a/MovieApp/Views/Shared/_StylesPartial.cshtml
+++ b/MovieApp/Views/Shared/_StylesPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- Favicons -->
-<link href="~/ui/img/favicon.png" rel="icon">
+<link href="~/ui/img/movie-frame.png" rel="icon" type="image/svg+xml">
 <link href="~/ui/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 <!-- Fonts -->
