--- a/MovieApp/Views/Iletisims/Index.cshtml
+++ b/MovieApp/Views/Iletisims/Index.cshtml
@@ -7,10 +7,8 @@
         <div class="container">
             <div class="row d-flex justify-content-center text-center">
                 <div class="col-lg-8">
-                    <h1>Contact</h1>
-                    <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint
-                        voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                        ratione sint. Sit quaerat ipsum dolorem.</p>
+                    <h1>İLETİŞİM</h1>
+                    <p class="mb-0">Bizimle fikirlerinizi paylaşın.</p>
                 </div>
             </div>
         </div>
@@ -28,31 +26,31 @@
                     <div class="info-item d-flex align-items-center">
                         <i class="bi bi-geo-alt flex-shrink-0"></i>
                         <div>
-                            <h3>Location</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <h3>KONUM</h3>
+                            <p>İstanubl, Nişantaşı Üniversitesi, Acunmedya Akademi</p>
                         </div>
                     </div>
-                </div><!-- End Info Item -->
+                </div>
 
                 <div class="col-lg-4">
                     <div class="info-item d-flex align-items-center">
                         <i class="bi bi-telephone flex-shrink-0"></i>
                         <div>
-                            <h3>Call</h3>
-                            <p>+1 5589 55488 55</p>
+                            <h3>Telefon</h3>
+                            <p>+90 0528 548 54 89</p>
                         </div>
                     </div>
-                </div><!-- End Info Item -->
+                </div>
 
                 <div class="col-lg-4">
                     <div class="info-item d-flex align-items-center">
                         <i class="bi bi-envelope flex-shrink-0"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>info@example.com</p>
+                            <p>info@popcornviews.com</p>
                         </div>
                     </div>
-                </div><!-- End Info Item -->
+                </div>
 
             </div>
         </div>
@@ -81,7 +79,7 @@
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                    <button type="submit">Send Message</button>
+                    <button type="submit">Gönder</button>
                 </div>
 
             </div>
