--- a/MovieApp/Views/Shared/_HeaderPartial.cshtml
+++ b/MovieApp/Views/Shared/_HeaderPartial.cshtml
@@ -7,23 +7,20 @@
             <h1 class="sitename">PopcornViews</h1>
         </a>
 
-        <nav id="navmenu" class="navmenu ">
+        <nav id="navmenu" class="navmenu " >
             <ul>
                 <li><a asp-area="Views" asp-controller="Home" asp-action="Index">Ana Sayfa</a></li>
-                <li class="dropdown"><a ><span>KATEGORİLER</span><i
-                            class="bi bi-chevron-down toggle-dropdown"></i></a>
-
+                <li class="dropdown"><a><span>KATEGORİLER</span><i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
-                        <li><a  asp-controller="Category" asp-action="Aksiyon">Aksiyon</a></li>
-                        <li><a  asp-controller="Category" asp-action="Komedi">Komedi</a></li>
-                        <li><a  asp-controller="Category" asp-action="Drama">Dram</a></li>
-                        <li><a  asp-controller="Category" asp-action="Korku">Korku</a></li>
-                        <li><a  asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a>
+                        <li><a asp-controller="Category" asp-action="Aksiyon">Aksiyon</a></li>
+                        <li><a asp-controller="Category" asp-action="Komedi">Komedi</a></li>
+                        <li><a asp-controller="Category" asp-action="Drama">Dram</a></li>
+                        <li><a asp-controller="Category" asp-action="Korku">Korku</a></li>
+                        <li><a asp-controller="Category" asp-action="BilimKurgu">Bilim Kurgu</a>
                         </li>
                     </ul>
                 </li>
-                <li><a  asp-controller="Iletisims" asp-action="Index">İLETİŞİM</a></li>
-                <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">YÖNETİM<br></a></li>
+                <li><a asp-controller="Iletisims" asp-action="Index">İLETİŞİM</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
