--- a/MovieApp/Views/Shared/_Layout.cshtml
+++ b/MovieApp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - PhotoFolio Bootstrap Template</title>
+  <title>PopcornViews</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
