WatchUrl Eklendi. Giris-PopUp Eklendi. Database Guncellendi
WatchUrl Eklendi. Giris-PopUp Eklendi. Database Guncellendi 20-11-2024

--- a/MovieApp/Views/Detay/Index.cshtml
+++ b/MovieApp/Views/Detay/Index.cshtml
@@ -52,6 +52,15 @@
                             <strong>Star Oyuncu</strong>
                             <p>@Model.Star</p>
                         </div>
+                        <div class="col-lg-2">
+                            <strong>Nereden Izlenir?</strong>
+                            <a href="@Model.WatchUrl" target="_blank">
+                                <img src="~/ui/img/justwatch-icon.png" alt="Just Watch Icon"
+                                    style="width:20px; height:20px; margin-right:5px;">
+                                Just Watch
+                            </a>
+
+                        </div>
                     </div>
                 </div>
             </div>
