--- a/MovieApp/Views/Home/Index.cshtml
+++ b/MovieApp/Views/Home/Index.cshtml
@@ -50,8 +50,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-MadMax-1.png" title="Mad Max"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Detay" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/1" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -63,8 +64,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-jhonwick-2.jpg" title="Jhon Wick 2"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/2" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -76,8 +78,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Aksiyon-matrix-5.jpg" title="Matrix" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/23" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -89,8 +92,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/BilimKurgu-Yildizlararasi-2.jpg" title="Yıldızlar Arası"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/9" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -114,8 +118,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Komedi-uveykardesler-4.jpg" title="Üvey Kardeşler"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/9" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -127,8 +132,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Korku-CadilarBayrami-4.jpg" title="Cadılar Bayramı"
                             class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/19" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -140,8 +146,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Dram-baba-4.jpg" title="Baba" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/14" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
@@ -153,8 +160,9 @@
                     <div class="gallery-links d-flex align-items-center justify-content-center">
                         <a href="~/ui/img/Filmler/Korku-O-5.jpg" title="O" class="glightbox preview-link"><i
                                 class="bi bi-arrows-angle-expand"></i></a>
-                        <a asp-controller="Detay" asp-action="Index" class="details-link"><i
-                                class="bi bi-link-45deg"></i></a>
+                        <a href="/Detay/Index/20" class="details-link">
+                            <i class="bi bi-link-45deg"></i>
+                        </a>
                     </div>
                 </div>
             </div><!-- End Gallery Item -->
